# ModelMRI

./: .gitignore  LOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  ArcCanvas.tsx  AttentionPanel.tsx  FeaturesPanel.tsx  Playground.tsx  api.ts  styles.css
modelmri/: __init__.py  cli.py  runtime.py  saes.py  server.py
modelmri/static/: index.html
npm-stub/: cli.js  package.json
tests/: test_smoke.py
